--- a/.env.example
+++ b/.env.example
@@ -62,6 +62,7 @@ ADMIN_LAST_NAME=User
 
 # ===== Application Settings =====
 ENVIRONMENT=development
+ENV=development  # Set to "production" for multi-worker mode
 FRONTEND_URL=http://localhost:3000
 API_URL=http://localhost:8000
 BACKEND_URL=http://localhost:8000
